--- a/_posts/2019-08-20-spring.md
+++ b/_posts/2019-08-20-spring.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "Spring"
+title:      "spring"
 subtitle:   " \Spring\"
 date:       2019-08-20 12:00:00
 author:     "Guiling"
