--- a/_posts/2019-08-20-Spring2.md
+++ b/_posts/2019-08-20-Spring2.md
@@ -29,7 +29,7 @@ Spring的容器创建过程由此处开始分析：
 
     ​    2.1进行容器刷新前的预处理工作
 
-![](img\spring\2018\12\2p17srss98hhnpi4h3c48dc12j.png)
+![](\img\spring\2018\12\2p17srss98hhnpi4h3c48dc12j.png)
 
 记录容器开始启动刷新的当前时间，并且将容器状态修改为激活状态，然后进行属性资源的初始化，这里需要注意<font color="#ffc66d" face="DejaVu Sans Mono"><span style="font-size: 18px;">initPropertySources()</span></font>
 
@@ -37,7 +37,7 @@ Spring的容器创建过程由此处开始分析：
 
 **getEnvironment().validateRequiredProperties();**方法在容器刷新前校验被设置为require的属性是否为空，若为空将直接返回异常<font color="#ff9c00">**MissingRequiredPropertiesException**</font><span style="background-color: rgb(239, 239, 239);">异常。</span>
 
-![](img\spring\2018\12\66s3ftvq8ciqvpbua3ne6j5drm.png)
+![](\img\spring\2018\12\66s3ftvq8ciqvpbua3ne6j5drm.png)
 
 最后创建一个List容器用来存放早期生产的事件当派发器创建完成后将会对放在容器中的事件进行派发
 
