--- a/_posts/2019-08-21-Spring源码学习.md
+++ b/_posts/2019-08-21-Spring源码学习.md
@@ -24,15 +24,15 @@ tags:
 
 在容器刷新前准备完成后会调用<span style="background-color: rgb(43, 43, 43); color: rgb(169, 183, 198); font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt;">ConfigurableListableBeanFactory beanFactory = obtainFreshBeanFactory()</span><font color="#cc7832" face="DejaVu Sans Mono"><span style="font-size: 13.5pt;">;</span></font>方法获得BeanFactory，在<span style="color: rgb(255, 198, 109); background-color: rgb(43, 43, 43); font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt;">obtainFreshBeanFactory</span>中首先会刷新BeanFactory，<span style="background-color: rgb(43, 43, 43); color: rgb(169, 183, 198); font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt;">refreshBeanFactory()</span><span style="font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt; color: rgb(204, 120, 50);">;</span>是<span style="background-color: rgb(43, 43, 43); color: rgb(169, 183, 198); font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt;">AbstractApplicationContext</span>的一个抽象方法不同的创建容器的方式实现不同，这里先来看一下<span style="background-color: rgb(43, 43, 43); color: rgb(169, 183, 198); font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt;">AbstractApplicationContext</span>的类结构图：
 
-![](/image/2018/12/ripj80slkaiatqu727jlkatu47.png)
+![](\img\spring\2018\12\ripj80slkaiatqu727jlkatu47.png)
 
 由类图可以看出注解方式使用的<span style="background-color: rgb(43, 43, 43); color: rgb(169, 183, 198); font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt;">AnnotationConfigApplicationContext</span>类继承了<span style="background-color: rgb(43, 43, 43); color: rgb(169, 183, 198); font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt;">GenericApplicationContext</span>类所以在进行BeanFactory刷新时调用了父类<span style="background-color: rgb(43, 43, 43); color: rgb(169, 183, 198); font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt;">GenericApplicationContext</span>类实现的<span style="font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt; color: rgb(255, 198, 109);">refreshBeanFactory</span><span style="background-color: rgb(43, 43, 43); color: rgb(169, 183, 198); font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt;">()</span>方法实际是给BeanFactory设置了一个ID.
 
-![](/image/2018/12/oerlgkghkagpjoips2nafni7bh.png)
+![](\img\spring\2018\12\oerlgkghkagpjoips2nafni7bh.png)
 
 如果使用另外两种方式创建容器的话在刷新BeanFactory时所作的操作是不同的，因为其他两种方式他们的父类是<span style="background-color: rgb(43, 43, 43); color: rgb(169, 183, 198); font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt;">AbstractRefreshableApplicationContext</span>在刷新时调用了AbstractRefreshableApplicationContext的实现，具体做了哪些事呢？
 
-![](/image/2018/12/sdp56v79deipir15ehtgt2gu0v.png)
+![](\img\spring\2018\12\sdp56v79deipir15ehtgt2gu0v.png)
 
 由代码可以看出，这里首先判断当前是否已经有一个BeanFactory存在了，如果已经存在了一个BeanFactory就执行destroyBeans（）方法，在方法中拿到当前的BeanFactory并销毁所有的单实例Bean和缓存中的Bean，关闭并销毁当前的BeanFactory，为创建新的BeanFactory做准备。
 
@@ -40,6 +40,6 @@ tags:
 
 然后加载XML中的Bean定义信息
 
-![](/image/2018/12/63fml1bvg6g8grm4qk00q5ishq.png)创建一个XmlBeanDefinitionReader用来读取XML中Bean的配置信息，设置reader的属性，然后将Bean的定义信息进行注册，返货Bean的数量。将刷新后的BeanFactory设置为全局的。然后回到obtainFreshBeanFactory()方法中调用getBeanFactory将BeanFactory返回。至此BeanFactory刷新完成。
+![](\img\spring\2018\12\63fml1bvg6g8grm4qk00q5ishq.png)创建一个XmlBeanDefinitionReader用来读取XML中Bean的配置信息，设置reader的属性，然后将Bean的定义信息进行注册，返货Bean的数量。将刷新后的BeanFactory设置为全局的。然后回到obtainFreshBeanFactory()方法中调用getBeanFactory将BeanFactory返回。至此BeanFactory刷新完成。
 
 这里其实主要做了两件事情，BeanFactory的刷新前准备，和实际两种不同方式在BeanFactory刷新时的不同方式。
