--- a/_posts/2019-08-21-Spring-03.md
+++ b/_posts/2019-08-21-Spring-03.md
@@ -29,7 +29,7 @@ tags:
 beanFactory.addBeanPostProcessor(new ApplicationContextAwareProcessor(this));
 ```
 
-是比较重要的，他给BeanFactory设置了一个PostProcess后置处理器，**ApplicationContextAwareProcessor**是一个实现了BeanPostprocess的类，由BeanPostProcess的特性可知这个**ApplicationContextAwareProcessor** 中的两个主要方法**postProcessBeforeInitialization和postProcessAfterInitialization**将会在自定义的Bean的init方法执行前后去执行，postProcessAfterInitialization方法并没有过多的操作，主要的操作在**postProcessBeforeInitialization**方法中![img](\image\spring\2018\12\7ur95mi9t6g5cput1nguhs8abp.png)
+是比较重要的，他给BeanFactory设置了一个PostProcess后置处理器，**ApplicationContextAwareProcessor**是一个实现了BeanPostprocess的类，由BeanPostProcess的特性可知这个**ApplicationContextAwareProcessor** 中的两个主要方法**postProcessBeforeInitialization和postProcessAfterInitialization**将会在自定义的Bean的init方法执行前后去执行，postProcessAfterInitialization方法并没有过多的操作，主要的操作在 **postProcessBeforeInitialization** 方法中![img](\img\spring\2018\12\7ur95mi9t6g5cput1nguhs8abp.png)
 
 在前置方法中执行了inVokeAwareInterfaces方法![img](\img\spring\2018\12\1tjvu1ukjchu2pum2kdk10e71s.png)
 
