--- a/_posts/2019-08-21-Spring源码学习.md
+++ b/_posts/2019-08-21-Spring源码学习.md
@@ -17,10 +17,13 @@ tags:
 
 首先看一下创建容器的几种方式，上篇中只说了其中的一种方式，使用注解的方式创建。除了注解方式外还有
 
-<pre>        `ApplicationContext applicationContext = new AnnotationConfigApplicationContext(MainConfig.class);
+```java
+ApplicationContext applicationContext = new AnnotationConfigApplicationContext(MainConfig.class);
         ApplicationContext applicationContext1  = new ClassPathXmlApplicationContext("");
-        ApplicationContext applicationContext2  = new FileSystemXmlApplicationContext("");`  
-</pre>
+        ApplicationContext applicationContext2  = new FileSystemXmlApplicationContext("");
+```
+
+
 
 在容器刷新前准备完成后会调用<span style="background-color: rgb(43, 43, 43); color: rgb(169, 183, 198); font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt;">ConfigurableListableBeanFactory beanFactory = obtainFreshBeanFactory()</span><font color="#cc7832" face="DejaVu Sans Mono"><span style="font-size: 13.5pt;">;</span></font>方法获得BeanFactory，在<span style="color: rgb(255, 198, 109); background-color: rgb(43, 43, 43); font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt;">obtainFreshBeanFactory</span>中首先会刷新BeanFactory，<span style="background-color: rgb(43, 43, 43); color: rgb(169, 183, 198); font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt;">refreshBeanFactory()</span><span style="font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt; color: rgb(204, 120, 50);">;</span>是<span style="background-color: rgb(43, 43, 43); color: rgb(169, 183, 198); font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt;">AbstractApplicationContext</span>的一个抽象方法不同的创建容器的方式实现不同，这里先来看一下<span style="background-color: rgb(43, 43, 43); color: rgb(169, 183, 198); font-family: &quot;DejaVu Sans Mono&quot;; font-size: 13.5pt;">AbstractApplicationContext</span>的类结构图：
 
