--- a/_posts/2019-09-21-redis.md
+++ b/_posts/2019-09-21-redis.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "一个程序员的江湖"
+title:      "一个程序员的江湖之Redis"
 subtitle:   "新手村只Redis"
 date:        2019-09-21
 author:     "GuiLing"
