--- a/_posts/2019-09-21-redis.md
+++ b/_posts/2019-09-21-redis.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "一个程序员的江湖之Redis"
-subtitle:   "新手村只Redis"
+subtitle:   "新手村之Redis"
 date:        2019-09-21
 author:     "GuiLing"
 header-img: "img/post-bg-js-module.jpg"
