--- a/_posts/2019-03-20-srping.md
+++ b/_posts/2019-03-20-srping.md
@@ -17,6 +17,22 @@ tags:
 
   ###  话不多说先上图
 
-  ![](\img\spring\2018\12\3jjgq1mqjsj2brmfo1tdlp22vv.png)
+  - #### bean的转换过程
 
+    
+  
+  ###  ![屏幕快照 2019-10-03 下午9.48.44](/img/spring/2019/11/屏幕快照 2019-10-03 下午9.48.44.jpg)
+  
+  #### ApplicationContext 的架构图
+  
+  ![spring-201901311002](/img/spring/2019/11/spring-201901311002.jpg)
+  
+  #### 加载Bean的全过程![spring-201901311003](/img/spring/2019/11/spring-201901311003.jpg)
+  
+  ####getBean 的全流程
+  
+  ![spring-201901311004](/img/spring/2019/11/spring-201901311004.jpg)[
+  ](https://gitee.com/chenssy/blog-home/raw/master/image/201809/spring-201901311004.jpg)
+  
   此图是基于源码的阅读所画的Spring容器的创建过程图。
+
